@@ -1,5 +1,8 @@
 ChangeLog 'ClusteringSuite'
 
+2015-12-17 German Llort <german.llort@bsc.es>
+	* Updated boost.m4 
+
 2015-11-06 German Llort <german.llort@bsc.es>
 	* Fixed bug in the parsing of the PCF file for the description of hardware counter events.
 
